# SWAXSanalysis

./: .gitignore  2023_06_19_safelymove_saxs.ipynb  2023_06_19_safelymove_waxs.ipynb  Analyse_icar2442005.ipynb  README .txt  README.md  SafeLiMove_WAXS2_1_00002.edf  SafeliMove_WAXS1_1_00001.edf  __init__.py  auto_edf2h5.py  gui_edf2h5.py  gui_modify_h5.py  nexus_format.py  nexus_generation.py  pyproject.toml  settings_EDF2NXsas_Xeuss_2023-11-08T12-47.txt  test_toto.py  test_utilitary_functions.py
Configs/: settings_EDF2NXsas_Xeuss_2024-11-08T12-41.txt
EDF2NeXus/: __init__.py
SWAXSanalysis/: __init__.py  class_nexus_file.py  data_processing.py  launcher.py  nxfile_generator.py  utils.py
SWAXSanalysis/Data Treatment Center/Jupyter notebooks/NoteBook/: 2_How_to_use_NexusFile.ipynb  3_Advanced_processing.ipynb
SWAXSanalysis/machine_configs/XEUSS/: jupyter_launcher.bat
SWAXSanalysis/machine_configs/XEUSS/.ipynb_checkpoints/: nexus_file_processing-checkpoint.ipynb
SWAXSanalysis/nexus_standards/: structure_NXcanSAS.json  structure_NXunits.json
configs/: settings_EDF2NXsas_Xeuss_2024-12-19T15-00.json  settings_EDF2NXsas_testXeuss_2024-12-19T15-00.json
demo_notebooks/: extracting_data.ipynb
demo_notebooks/.ipynb_checkpoints/: extracting_data-checkpoint.ipynb
edf2nxsas/: create_config.py  data_treatment.py  main_create_config.py  main_manual_treatment.py  main_nexus_file_generator.py  nexus_file_generator.py
edf2nxsas/nexus_formats/: __init__.py  structure_NXcanSAS.json  structure_NXsas.json
package/: README .txt  auto_edf2h5.py  gui_edf2h5.py  gui_modify_h5.py  nexus_format.py  nexus_generation.py
package/others/: Exploit .h5.ipynb
package/tests/: test_toto.py  test_utilitary_functions.py
saxs_nxformat/: __init__.py  class_nexus_file.py  create_config.py  data_processing.py  launcher.py  main_manual_treatment.py  nxfile_generator.py  utils.py
saxs_nxformat/XEUSS/: measure_1_00001.edf  measure_1_00002.edf  measure_1_00003.edf  measure_1_00004.edf
saxs_nxformat/machine_configs/XEUSS/: jupyter.bat  jupyter_launcher.bat  nexus_file_processing.ipynb  settings_EDF2NX_XEUSS_202503101406.json  settings_EDF2NX_XEUSS_202503250953.json  settings_EDF2NX_XEUSS_202504090957.json  traitement GC.ipynb  update_saxs_nxformat.bat
saxs_nxformat/nexus_standards/: structure_NXcanSAS.json  structure_NXunits.json
saxs_nxformat/tests/: generate_dummy.py  test_conversion.py  test_process.py  test_utils.py
saxs_nxformat/tests/files/: dummySample_img0.h5  dummySample_img1.h5
src/: __init__.py  analyse_manuelle_I_ABS_BG.py  analyse_manuelle_I_ABS_GC.py  class_nexus_file.py  nxfile_generator.py
src/machine_configs/XEUSS/: settings_EDF2NX_XEUSS_202504090957.json
src/nexus_standards/: structure_NXcanSAS.json
tests/: settings_EDF2NX_testMachine_202507281529.json  test_conversion.py  test_new_nexus_def.py  test_process.py  utils.py
