[build-system]
requires = ['setuptools>=42']
build-backend = 'setuptools.build_meta'

[project]
name = "saxs_nxformat"
version = "2025.2"
# dynamic = ["version"]
authors = [
    { name = "Adrien Toulouse", email = "adrien.toulouse@cea.fr" }
]
description = "BLABLA"
readme = "README.md"
requires-python = ">=3.9"
keywords = []
license = { text = "GPL v3" }
classifiers = [
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX :: Linux',
    'Operating System :: MacOS :: MacOS X',
    'Environment :: Console',
]
dependencies = [
    "numpy",
    "matplotlib",
    "h5py",
    "fabio"
    # "smi-analysis" = { git = "https://github.com/NSLS-II-SMI/smi-analysis.git", branch = "main" }
]

# [tool.setuptools.package-data]
# "fitspy" = ["resources/iconpack/*.png", "resources/iconpack/*.svg"]

[project.scripts]
nxformat = "saxs_nxformat.launcher:launcher_gui"

[tool.setuptools]
include-package-data = false

# [tool.setuptools.dynamic]
# version = { attr = "fitspy.VERSION" }

[tool.setuptools.packages.find]
where = ["."]
include = ["saxs_nxformat*"]
namespaces = false

# [tool.pytest.ini_options]
# minversion = "6.0"
# testpaths = ["tests"]

[project.urls]
Homepage = "https://github.com/CEA-MetroCarac/saxs_nxformat"
# Documentation = "https://cea-metrocarac.github.io/fitspy/doc/index.html"

# [project.optional-dependencies]
# dev = ["pytest", "watchdog", "esbonio", "sphinx", "doc8", "rstcheck", "sphinx-rtd-theme", "sphinx-copybutton"]
