[build-system]
requires = ['setuptools>=42']
build-backend = 'setuptools.build_meta'

[project]
name = "saxs_nxformat"
version = "2025.2"
authors = [
    { name = "Adrien Toulouse", email = "adrien.toulouse@cea.fr" }
]
description = "BLABLA"
readme = "README.md"
requires-python = ">=3.9"
keywords = []
license = { text = "GPL v3" }
classifiers = [
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX :: Linux',
    'Operating System :: MacOS :: MacOS X',
    'Environment :: Console',
]
dependencies = [
    "numpy",
    "matplotlib",
    "h5py",
    "fabio",
    "memory_profiler"
    # "smi-analysis" = { git = "https://github.com/NSLS-II-SMI/smi-analysis.git", branch = "main" }
]

[project.scripts]
nxformat = "saxs_nxformat.launcher:launcher_gui"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"saxs_nxformat" = ["**/*"]

[tool.setuptools.packages.find]
where = ["."]
include = ["saxs_nxformat*"]
namespaces = false

[project.urls]
Homepage = "https://github.com/CEA-MetroCarac/saxs_nxformat"
